docs: add `getReadingById` documentation
